--- a/src/scss/core/_mixins.scss
+++ b/src/scss/core/_mixins.scss
@@ -19,3 +19,19 @@
   justify-content: flex-end;
 }
 //@include flexRowFlexEnd();
+
+@mixin markerSoftSkills {
+  margin: 0 -4px;
+  padding: 3px 4px;
+  border-radius: 3px 3px;
+  background: transparent;
+  background-image: linear-gradient(
+    to right,
+    rgba(238, 225, 0, 0.1),
+    rgb(238, 255, 0) 4%,
+    rgba(238, 225, 0, 0.1)
+  );
+  -webkit-box-decoration-break: clone;
+  box-decoration-break: clone;
+}
+//@include markerSoftSkills();
