--- a/src/scss/pages/_contact.scss
+++ b/src/scss/pages/_contact.scss
@@ -53,6 +53,7 @@
       color: $color-title-contact;
       -webkit-transform: rotate(90deg);
       -moz-transform: rotate(90deg);
+      transform: rotate(90deg);
       padding: 0 7px 7px 0;
       @media all and (min-width: 1366px) {
         font-size: 45px;
