--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 @import "layout/main-home";
 @import "layout/header";
 @import "layout/footer";
+@import "pages/index";
 @import "pages/about";
 @import "pages/projects";
 @import "pages/contact";
